:bug: Fixes login message wrap

--- a/src/styles/Login.scss
+++ b/src/styles/Login.scss
@@ -36,6 +36,8 @@
         .message {
             margin: 0;
             color: black;
+
+            text-align: center;
         }
 
         .input-label {
