--- a/src/styles/Settings.css
+++ b/src/styles/Settings.css
@@ -1,98 +1,127 @@
 .settings {
   position: fixed;
   top: 2%;
-  left: 1.5%; }
-  @media only screen and (min-width: 200px) {
-    .settings {
-      width: 20%;
-      height: 14%; } }
-  @media only screen and (min-width: 600px) {
-    .settings {
-      width: 12%;
-      height: 12%; } }
-  @media only screen and (min-width: 1000px) {
-    .settings {
-      width: 8%;
-      height: 10%; } }
-  @media only screen and (min-width: 1400px) {
-    .settings {
-      width: 5%;
-      height: 8%; } }
-  .settings .settings-icon {
-    width: 100%;
-    height: 100%; }
+  left: 1.5%;
+}
+@media only screen and (min-width: 200px) {
+  .settings {
+    width: 20%;
+    height: 14%;
+  }
+}
+@media only screen and (min-width: 600px) {
+  .settings {
+    width: 12%;
+    height: 12%;
+  }
+}
+@media only screen and (min-width: 1000px) {
+  .settings {
+    width: 8%;
+    height: 10%;
+  }
+}
+@media only screen and (min-width: 1400px) {
+  .settings {
+    width: 5%;
+    height: 8%;
+  }
+}
+.settings .settings-icon {
+  width: 100%;
+  height: 100%;
+}
+.settings .settings-popup {
+  position: absolute;
+  background-color: white;
+  border: 1px solid black;
+  margin-top: 2%;
+  min-height: 0;
+}
+@media only screen and (min-width: 200px) {
   .settings .settings-popup {
-    position: absolute;
-    background-color: white;
-    border: 1px solid black;
-    margin-top: 2%;
-    min-height: 0; }
-    @media only screen and (min-width: 200px) {
-      .settings .settings-popup {
-        width: 50vw; } }
-    @media only screen and (min-width: 600px) {
-      .settings .settings-popup {
-        width: 35vw; } }
-    @media only screen and (min-width: 1000px) {
-      .settings .settings-popup {
-        width: 20vw; } }
-    @media only screen and (min-width: 1400px) {
-      .settings .settings-popup {
-        width: 18vw; } }
-    .settings .settings-popup .logout-button {
-      float: right;
-      margin: 5px;
-      padding: 5px 10px;
-      font-size: 2em;
-      background-color: #d5d5d5;
-      border: none;
-      border-radius: 5px; }
-      .settings .settings-popup .logout-button:active {
-        background-color: #c8c8c8; }
-    .settings .settings-popup .setting {
-      display: flex;
-      flex-direction: row;
-      flex-wrap: wrap; }
-      .settings .settings-popup .setting .setting-name {
-        margin: 1% 6%;
-        font-size: 2.2rem;
-        width: 200px; }
-      .settings .settings-popup .setting .switch {
-        width: 80px;
-        height: 40px;
-        margin: auto; }
-        .settings .settings-popup .setting .switch input {
-          height: 0;
-          width: 0;
-          visibility: hidden;
-          position: absolute; }
-          .settings .settings-popup .setting .switch input:checked + label span {
-            left: calc(100% - 2px);
-            transform: translateX(-100%); }
-          .settings .settings-popup .setting .switch input:checked + label {
-            background-color: lightblue; }
-        .settings .settings-popup .setting .switch label {
-          position: relative;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          cursor: pointer;
-          width: 80px;
-          height: 40px;
-          border-radius: 100px;
-          transition: background-color 350ms;
-          background-color: grey;
-          margin: 0; }
-          .settings .settings-popup .setting .switch label span {
-            content: '';
-            position: absolute;
-            top: 2px;
-            left: 2px;
-            width: 35px;
-            height: 35px;
-            border-radius: 45px;
-            transition: 350ms;
-            background: #fff;
-            box-shadow: 0 0 2px 0 rgba(10, 10, 10, 0.29); }
+    width: 50vw;
+  }
+}
+@media only screen and (min-width: 600px) {
+  .settings .settings-popup {
+    width: 35vw;
+  }
+}
+@media only screen and (min-width: 1000px) {
+  .settings .settings-popup {
+    width: 20vw;
+  }
+}
+@media only screen and (min-width: 1400px) {
+  .settings .settings-popup {
+    width: 18vw;
+  }
+}
+.settings .settings-popup .logout-button {
+  float: right;
+  margin: 5px;
+  padding: 5px 10px;
+  font-size: 2em;
+  background-color: #d5d5d5;
+  border: none;
+  border-radius: 5px;
+}
+.settings .settings-popup .logout-button:active {
+  background-color: #c8c8c8;
+}
+.settings .settings-popup .setting {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+.settings .settings-popup .setting .setting-name {
+  margin: 1% 6%;
+  font-size: 2.2rem;
+  width: 200px;
+}
+.settings .settings-popup .setting .switch {
+  width: 80px;
+  height: 40px;
+  margin: auto;
+}
+.settings .settings-popup .setting .switch input {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+  position: absolute;
+}
+.settings .settings-popup .setting .switch input:checked + label span {
+  left: calc(100% - 2px);
+  transform: translateX(-100%);
+}
+.settings .settings-popup .setting .switch input:checked + label {
+  background-color: lightblue;
+}
+.settings .settings-popup .setting .switch label {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  width: 80px;
+  height: 40px;
+  border-radius: 100px;
+  transition: background-color 350ms;
+  background-color: grey;
+  margin: 0;
+}
+.settings .settings-popup .setting .switch label span {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 35px;
+  height: 35px;
+  border-radius: 45px;
+  transition: 350ms;
+  background: #fff;
+  box-shadow: 0 0 2px 0 rgba(10, 10, 10, 0.29);
+}
 
 /*# sourceMappingURL=Settings.css.map */
